# scipyen

./: .directory  .gitignore  .kateproject  .kateproject~  21d17 guiClient in ImageViewer.txt  CHANGES  Clampex_logic  LICENSE  LSCaT_diagrams.xmi  LSCaT_use_case.xmi  LTP_logic  README (1).md  README Python Virtual Environments  README configuration options  README for Spyder3  README for Spyder3.md  README kernel handling in scipyen  README scipyenv  README scipyenv 21i20 kepler  README vigra  README.md  Readme scipyenv Windows 10.rtf  Scipyen.desktop  TODO  __init__.py  build dependencies for scipyen  build dependencies for scipyen windows 10  build_app.bat  build_app.sh  config.yaml  config_default.yaml  diagram.xmi  env_install.sh  env_install_test.sh  envact  history_gradient_widgets_21i17.py  install.sh  install_old_do_not_use.sh  jupyterlab.sh  kernels.dia  (+39 more)
code tests/: LTP_analysis_command_history_example.py  ScatterPlotSpeedTestTemplate_pyqt5.py  embed_class_long.py  example of variable watcher.py  example signal5 data loaded from CFS exported as matlab.py  example_plugin.py  notes_about_axon_protocols_read_by_neo.py  pict_with_console_subprocess.py  scipy optimize leastsq and least_squares
core/: __init__.py  analysisunit.py  asyncutils.py  axiscalibration.py  axisutils.py  axonrawio_patch.py  basescipyen.py  bfsdfs.py  curvefitting.py  custom_magics.py  data_analysis.py  databagtrait.py  datasignal.py  datatypes.py  datatypes.py~  datazone.py  desktoputils.py  detect_ipython_environment.py  dicts for nested finder 21g22 Kepler  dicts for nested finder 21g26 BrukerLinux  dicts for nested finder 21g26 b BrukerLinux  dicts for nested finder 21g27 Hermes  embeddedIPkernel.py  extipy_init.py  extipyutils.py  extipyutils_client.py  extipyutils_host.py  factory.py  history.py  imageprocessing.py  imaging.py  internalIPkernel.py  ipkernel_qtapp.py  metaclass_solver.py  modelfitting.py  models.py  monkey.py  multiframeindex.py  neoepoch.py  neoevent.py  (+30 more)
doc/: About LTP analysis.md  CMake configuration for nrn on Hermes Linux  LTP analysis cheat sheet.md  Plotting data in SignalViewer  README configuration options  about frames and sweeps in scandata.md  configurables_framework.xmi  example docstring.rst  example_docstring.rst  neo hierarchy  reStructuredText cheat sheet.html  reStructuredText cheat sheet.rst
env_install/: pip_requirements.txt  (+2 more)
ephys/: ltp.py  (+19 more)
src/scipyen/gui/scipyen_console_styles/: README.md  __init__.py  pyproject.toml
src/scipyen/gui/scipyen_console_styles/scipyen_console_styles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+684 files in other folders)
