[options]
package_dir = 
    =src
packages=find_namespace:

[options.packaged.find]
where=src

[options.entry_points]
pyinstaller40 = 
    hook-dirs = scipyen.__pyinstaller:get_hook_dirs
    tests = scipyen.__pyinstaller:get_PyInstaller_tests
 
[sdist]
formats=gztar

[bdist_wheel]
universal=1

[metadata]
name = scipyen
version = attr: scipyen.__version__
author = Cezar M. Tigaret
author_email = TigaretC@cardiff.ac.uk
description = Scientific python environment for neurophysiology
license      = GPL-3.0-or-later
classifiers = 
    Development Status :: 1 - Alpha
    Intended Audience :: Users
    Topic :: Data Analysis :: Electrophysiology :: Imaging
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    
